// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`File parser extracts query AST correctly from files 1`] = `
Object {
  "panicOnBuildCalls": Array [
    Array [
      "Using the global \`graphql\` tag for Gatsby's queries isn't supported as of v3.
Import it instead like:  import { graphql } from 'gatsby' in file:
global-query.js",
    ],
    Array [
      "Using the global \`graphql\` tag for Gatsby's queries isn't supported as of v3.
Import it instead like:  import { graphql } from 'gatsby' in file:
global-static-query-hooks.js",
    ],
  ],
  "results": Array [
    Object {
      "doc": Object {
        "definitions": Array [
          Object {
            "directives": Array [],
            "kind": "OperationDefinition",
            "loc": Object {
              "end": 30,
              "start": 1,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 20,
                "start": 7,
              },
              "value": "PageQueryName",
            },
            "operation": "query",
            "selectionSet": Object {
              "kind": "SelectionSet",
              "loc": Object {
                "end": 30,
                "start": 21,
              },
              "selections": Array [
                Object {
                  "alias": undefined,
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "loc": Object {
                    "end": 28,
                    "start": 25,
                  },
                  "name": Object {
                    "kind": "Name",
                    "loc": Object {
                      "end": 28,
                      "start": 25,
                    },
                    "value": "foo",
                  },
                  "selectionSet": undefined,
                },
              ],
            },
            "variableDefinitions": Array [],
          },
        ],
        "kind": "Document",
        "loc": Object {
          "end": 31,
          "start": 0,
        },
      },
      "filePath": "page-query.js",
      "hash": 3530286846,
      "isConfigQuery": false,
      "isHook": false,
      "isStaticQuery": false,
      "templateLoc": SourceLocation {
        "end": Position {
          "column": 0,
          "index": 95,
          "line": 6,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 31,
          "index": 64,
          "line": 2,
        },
      },
      "text": "query PageQueryName{foo}",
    },
    Object {
      "doc": Object {
        "definitions": Array [
          Object {
            "directives": Array [],
            "kind": "OperationDefinition",
            "loc": Object {
              "end": 34,
              "start": 1,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 24,
                "start": 7,
              },
              "value": "PageQueryIndirect",
            },
            "operation": "query",
            "selectionSet": Object {
              "kind": "SelectionSet",
              "loc": Object {
                "end": 34,
                "start": 25,
              },
              "selections": Array [
                Object {
                  "alias": undefined,
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "loc": Object {
                    "end": 32,
                    "start": 29,
                  },
                  "name": Object {
                    "kind": "Name",
                    "loc": Object {
                      "end": 32,
                      "start": 29,
                    },
                    "value": "foo",
                  },
                  "selectionSet": undefined,
                },
              ],
            },
            "variableDefinitions": Array [],
          },
        ],
        "kind": "Document",
        "loc": Object {
          "end": 35,
          "start": 0,
        },
      },
      "filePath": "page-query-indirect.js",
      "hash": 1314068098,
      "isConfigQuery": false,
      "isHook": false,
      "isStaticQuery": false,
      "templateLoc": SourceLocation {
        "end": Position {
          "column": 0,
          "index": 92,
          "line": 6,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 24,
          "index": 57,
          "line": 2,
        },
      },
      "text": "query PageQueryIndirect{foo}",
    },
    Object {
      "doc": Object {
        "definitions": Array [
          Object {
            "directives": Array [],
            "kind": "OperationDefinition",
            "loc": Object {
              "end": 35,
              "start": 1,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 25,
                "start": 7,
              },
              "value": "PageQueryIndirect2",
            },
            "operation": "query",
            "selectionSet": Object {
              "kind": "SelectionSet",
              "loc": Object {
                "end": 35,
                "start": 26,
              },
              "selections": Array [
                Object {
                  "alias": undefined,
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "loc": Object {
                    "end": 33,
                    "start": 30,
                  },
                  "name": Object {
                    "kind": "Name",
                    "loc": Object {
                      "end": 33,
                      "start": 30,
                    },
                    "value": "foo",
                  },
                  "selectionSet": undefined,
                },
              ],
            },
            "variableDefinitions": Array [],
          },
        ],
        "kind": "Document",
        "loc": Object {
          "end": 36,
          "start": 0,
        },
      },
      "filePath": "page-query-indirect-2.js",
      "hash": 1258001265,
      "isConfigQuery": false,
      "isHook": false,
      "isStaticQuery": false,
      "templateLoc": SourceLocation {
        "end": Position {
          "column": 0,
          "index": 93,
          "line": 6,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 24,
          "index": 57,
          "line": 2,
        },
      },
      "text": "query PageQueryIndirect2{foo}",
    },
    Object {
      "doc": Object {
        "definitions": Array [
          Object {
            "directives": Array [],
            "kind": "OperationDefinition",
            "loc": Object {
              "end": 16,
              "start": 1,
            },
            "name": Object {
              "kind": "Name",
              "value": "pagePageQueryNoNameJs1125018085",
            },
            "operation": "query",
            "selectionSet": Object {
              "kind": "SelectionSet",
              "loc": Object {
                "end": 16,
                "start": 7,
              },
              "selections": Array [
                Object {
                  "alias": undefined,
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "loc": Object {
                    "end": 14,
                    "start": 11,
                  },
                  "name": Object {
                    "kind": "Name",
                    "loc": Object {
                      "end": 14,
                      "start": 11,
                    },
                    "value": "foo",
                  },
                  "selectionSet": undefined,
                },
              ],
            },
            "variableDefinitions": Array [],
          },
        ],
        "kind": "Document",
        "loc": Object {
          "end": 17,
          "start": 0,
        },
      },
      "filePath": "page-query-no-name.js",
      "hash": 1125018085,
      "isConfigQuery": false,
      "isHook": false,
      "isStaticQuery": false,
      "templateLoc": SourceLocation {
        "end": Position {
          "column": 0,
          "index": 79,
          "line": 6,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 29,
          "index": 62,
          "line": 2,
        },
      },
      "text": "query{foo}",
    },
    Object {
      "doc": Object {
        "definitions": Array [
          Object {
            "directives": Array [],
            "kind": "OperationDefinition",
            "loc": Object {
              "end": 29,
              "start": 0,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 21,
                "start": 6,
              },
              "value": "StaticQueryName",
            },
            "operation": "query",
            "selectionSet": Object {
              "kind": "SelectionSet",
              "loc": Object {
                "end": 29,
                "start": 22,
              },
              "selections": Array [
                Object {
                  "alias": undefined,
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "loc": Object {
                    "end": 27,
                    "start": 24,
                  },
                  "name": Object {
                    "kind": "Name",
                    "loc": Object {
                      "end": 27,
                      "start": 24,
                    },
                    "value": "foo",
                  },
                  "selectionSet": undefined,
                },
              ],
            },
            "variableDefinitions": Array [],
          },
        ],
        "kind": "Document",
        "loc": Object {
          "end": 29,
          "start": 0,
        },
      },
      "filePath": "static-query.js",
      "hash": 2687344169,
      "isConfigQuery": false,
      "isHook": false,
      "isStaticQuery": true,
      "templateLoc": SourceLocation {
        "end": Position {
          "column": 46,
          "index": 115,
          "line": 4,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 17,
          "index": 86,
          "line": 4,
        },
      },
      "text": "query StaticQueryName{foo}",
    },
    Object {
      "doc": Object {
        "definitions": Array [
          Object {
            "directives": Array [],
            "kind": "OperationDefinition",
            "loc": Object {
              "end": 7,
              "start": 0,
            },
            "name": Object {
              "kind": "Name",
              "value": "staticStaticQueryNoNameJs3221935794",
            },
            "operation": "query",
            "selectionSet": Object {
              "kind": "SelectionSet",
              "loc": Object {
                "end": 7,
                "start": 0,
              },
              "selections": Array [
                Object {
                  "alias": undefined,
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "loc": Object {
                    "end": 5,
                    "start": 2,
                  },
                  "name": Object {
                    "kind": "Name",
                    "loc": Object {
                      "end": 5,
                      "start": 2,
                    },
                    "value": "foo",
                  },
                  "selectionSet": undefined,
                },
              ],
            },
            "variableDefinitions": Array [],
          },
        ],
        "kind": "Document",
        "loc": Object {
          "end": 7,
          "start": 0,
        },
      },
      "filePath": "static-query-no-name.js",
      "hash": 3221935794,
      "isConfigQuery": false,
      "isHook": false,
      "isStaticQuery": true,
      "templateLoc": SourceLocation {
        "end": Position {
          "column": 24,
          "index": 93,
          "line": 4,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 17,
          "index": 86,
          "line": 4,
        },
      },
      "text": "{foo}",
    },
    Object {
      "doc": Object {
        "definitions": Array [
          Object {
            "directives": Array [],
            "kind": "OperationDefinition",
            "loc": Object {
              "end": 29,
              "start": 0,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 21,
                "start": 6,
              },
              "value": "StaticQueryName",
            },
            "operation": "query",
            "selectionSet": Object {
              "kind": "SelectionSet",
              "loc": Object {
                "end": 29,
                "start": 22,
              },
              "selections": Array [
                Object {
                  "alias": undefined,
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "loc": Object {
                    "end": 27,
                    "start": 24,
                  },
                  "name": Object {
                    "kind": "Name",
                    "loc": Object {
                      "end": 27,
                      "start": 24,
                    },
                    "value": "foo",
                  },
                  "selectionSet": undefined,
                },
              ],
            },
            "variableDefinitions": Array [],
          },
        ],
        "kind": "Document",
        "loc": Object {
          "end": 29,
          "start": 0,
        },
      },
      "filePath": "static-query-named-export.js",
      "hash": 2687344169,
      "isConfigQuery": false,
      "isHook": false,
      "isStaticQuery": true,
      "templateLoc": SourceLocation {
        "end": Position {
          "column": 46,
          "index": 125,
          "line": 4,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 17,
          "index": 96,
          "line": 4,
        },
      },
      "text": "query StaticQueryName{foo}",
    },
    Object {
      "doc": Object {
        "definitions": Array [
          Object {
            "directives": Array [],
            "kind": "OperationDefinition",
            "loc": Object {
              "end": 7,
              "start": 0,
            },
            "name": Object {
              "kind": "Name",
              "value": "staticStaticQueryClosingTagJs3221935794",
            },
            "operation": "query",
            "selectionSet": Object {
              "kind": "SelectionSet",
              "loc": Object {
                "end": 7,
                "start": 0,
              },
              "selections": Array [
                Object {
                  "alias": undefined,
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "loc": Object {
                    "end": 5,
                    "start": 2,
                  },
                  "name": Object {
                    "kind": "Name",
                    "loc": Object {
                      "end": 5,
                      "start": 2,
                    },
                    "value": "foo",
                  },
                  "selectionSet": undefined,
                },
              ],
            },
            "variableDefinitions": Array [],
          },
        ],
        "kind": "Document",
        "loc": Object {
          "end": 7,
          "start": 0,
        },
      },
      "filePath": "static-query-closing-tag.js",
      "hash": 3221935794,
      "isConfigQuery": false,
      "isHook": false,
      "isStaticQuery": true,
      "templateLoc": SourceLocation {
        "end": Position {
          "column": 24,
          "index": 93,
          "line": 4,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 17,
          "index": 86,
          "line": 4,
        },
      },
      "text": "{foo}",
    },
    Object {
      "doc": Object {
        "definitions": Array [
          Object {
            "directives": Array [],
            "kind": "OperationDefinition",
            "loc": Object {
              "end": 29,
              "start": 0,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 21,
                "start": 6,
              },
              "value": "StaticQueryName",
            },
            "operation": "query",
            "selectionSet": Object {
              "kind": "SelectionSet",
              "loc": Object {
                "end": 29,
                "start": 22,
              },
              "selections": Array [
                Object {
                  "alias": undefined,
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "loc": Object {
                    "end": 27,
                    "start": 24,
                  },
                  "name": Object {
                    "kind": "Name",
                    "loc": Object {
                      "end": 27,
                      "start": 24,
                    },
                    "value": "foo",
                  },
                  "selectionSet": undefined,
                },
              ],
            },
            "variableDefinitions": Array [],
          },
        ],
        "kind": "Document",
        "loc": Object {
          "end": 29,
          "start": 0,
        },
      },
      "filePath": "page-query-and-static-query-named-export.js",
      "hash": 2687344169,
      "isConfigQuery": false,
      "isHook": false,
      "isStaticQuery": true,
      "templateLoc": SourceLocation {
        "end": Position {
          "column": 46,
          "index": 125,
          "line": 4,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 17,
          "index": 96,
          "line": 4,
        },
      },
      "text": "query StaticQueryName{foo}",
    },
    Object {
      "doc": Object {
        "definitions": Array [
          Object {
            "directives": Array [],
            "kind": "OperationDefinition",
            "loc": Object {
              "end": 27,
              "start": 0,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 19,
                "start": 6,
              },
              "value": "PageQueryName",
            },
            "operation": "query",
            "selectionSet": Object {
              "kind": "SelectionSet",
              "loc": Object {
                "end": 27,
                "start": 20,
              },
              "selections": Array [
                Object {
                  "alias": undefined,
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "loc": Object {
                    "end": 25,
                    "start": 22,
                  },
                  "name": Object {
                    "kind": "Name",
                    "loc": Object {
                      "end": 25,
                      "start": 22,
                    },
                    "value": "foo",
                  },
                  "selectionSet": undefined,
                },
              ],
            },
            "variableDefinitions": Array [],
          },
        ],
        "kind": "Document",
        "loc": Object {
          "end": 27,
          "start": 0,
        },
      },
      "filePath": "page-query-and-static-query-named-export.js",
      "hash": 3530286846,
      "isConfigQuery": false,
      "isHook": false,
      "isStaticQuery": false,
      "templateLoc": SourceLocation {
        "end": Position {
          "column": 60,
          "index": 234,
          "line": 8,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 33,
          "index": 207,
          "line": 8,
        },
      },
      "text": "query PageQueryName{foo}",
    },
    Object {
      "doc": Object {
        "definitions": Array [
          Object {
            "directives": Array [],
            "kind": "FragmentDefinition",
            "loc": Object {
              "end": 47,
              "start": 1,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 19,
                "start": 10,
              },
              "value": "Fragment1",
            },
            "selectionSet": Object {
              "kind": "SelectionSet",
              "loc": Object {
                "end": 47,
                "start": 38,
              },
              "selections": Array [
                Object {
                  "alias": undefined,
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "loc": Object {
                    "end": 45,
                    "start": 42,
                  },
                  "name": Object {
                    "kind": "Name",
                    "loc": Object {
                      "end": 45,
                      "start": 42,
                    },
                    "value": "foo",
                  },
                  "selectionSet": undefined,
                },
              ],
            },
            "typeCondition": Object {
              "kind": "NamedType",
              "loc": Object {
                "end": 37,
                "start": 23,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 37,
                  "start": 23,
                },
                "value": "RootQueryField",
              },
            },
          },
          Object {
            "directives": Array [],
            "kind": "FragmentDefinition",
            "loc": Object {
              "end": 94,
              "start": 48,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 66,
                "start": 57,
              },
              "value": "Fragment2",
            },
            "selectionSet": Object {
              "kind": "SelectionSet",
              "loc": Object {
                "end": 94,
                "start": 85,
              },
              "selections": Array [
                Object {
                  "alias": undefined,
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "loc": Object {
                    "end": 92,
                    "start": 89,
                  },
                  "name": Object {
                    "kind": "Name",
                    "loc": Object {
                      "end": 92,
                      "start": 89,
                    },
                    "value": "bar",
                  },
                  "selectionSet": undefined,
                },
              ],
            },
            "typeCondition": Object {
              "kind": "NamedType",
              "loc": Object {
                "end": 84,
                "start": 70,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 84,
                  "start": 70,
                },
                "value": "RootQueryField",
              },
            },
          },
        ],
        "kind": "Document",
        "loc": Object {
          "end": 95,
          "start": 0,
        },
      },
      "filePath": "multiple-fragment-exports.js",
      "hash": 1171727280,
      "isConfigQuery": false,
      "isHook": false,
      "isStaticQuery": false,
      "templateLoc": SourceLocation {
        "end": Position {
          "column": 0,
          "index": 161,
          "line": 9,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 33,
          "index": 66,
          "line": 2,
        },
      },
      "text": "fragment Fragment1 on RootQueryField{foo}fragment Fragment2 on RootQueryField{bar}",
    },
    Object {
      "doc": Object {
        "definitions": Array [
          Object {
            "directives": Array [],
            "kind": "FragmentDefinition",
            "loc": Object {
              "end": 47,
              "start": 1,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 19,
                "start": 10,
              },
              "value": "Fragment3",
            },
            "selectionSet": Object {
              "kind": "SelectionSet",
              "loc": Object {
                "end": 47,
                "start": 38,
              },
              "selections": Array [
                Object {
                  "alias": undefined,
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "loc": Object {
                    "end": 45,
                    "start": 42,
                  },
                  "name": Object {
                    "kind": "Name",
                    "loc": Object {
                      "end": 45,
                      "start": 42,
                    },
                    "value": "baz",
                  },
                  "selectionSet": undefined,
                },
              ],
            },
            "typeCondition": Object {
              "kind": "NamedType",
              "loc": Object {
                "end": 37,
                "start": 23,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 37,
                  "start": 23,
                },
                "value": "RootQueryField",
              },
            },
          },
        ],
        "kind": "Document",
        "loc": Object {
          "end": 48,
          "start": 0,
        },
      },
      "filePath": "multiple-fragment-exports.js",
      "hash": 3923246124,
      "isConfigQuery": false,
      "isHook": false,
      "isStaticQuery": false,
      "templateLoc": SourceLocation {
        "end": Position {
          "column": 0,
          "index": 244,
          "line": 14,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 33,
          "index": 196,
          "line": 10,
        },
      },
      "text": "fragment Fragment3 on RootQueryField{baz}",
    },
    Object {
      "doc": Object {
        "definitions": Array [
          Object {
            "directives": Array [],
            "kind": "OperationDefinition",
            "loc": Object {
              "end": 60,
              "start": 1,
            },
            "name": Object {
              "kind": "Name",
              "value": "staticFragmentShorthandJs3159585216",
            },
            "operation": "query",
            "selectionSet": Object {
              "kind": "SelectionSet",
              "loc": Object {
                "end": 60,
                "start": 7,
              },
              "selections": Array [
                Object {
                  "alias": undefined,
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "loc": Object {
                    "end": 58,
                    "start": 11,
                  },
                  "name": Object {
                    "kind": "Name",
                    "loc": Object {
                      "end": 15,
                      "start": 11,
                    },
                    "value": "site",
                  },
                  "selectionSet": Object {
                    "kind": "SelectionSet",
                    "loc": Object {
                      "end": 58,
                      "start": 16,
                    },
                    "selections": Array [
                      Object {
                        "alias": undefined,
                        "arguments": Array [],
                        "directives": Array [],
                        "kind": "Field",
                        "loc": Object {
                          "end": 54,
                          "start": 22,
                        },
                        "name": Object {
                          "kind": "Name",
                          "loc": Object {
                            "end": 34,
                            "start": 22,
                          },
                          "value": "siteMetadata",
                        },
                        "selectionSet": Object {
                          "kind": "SelectionSet",
                          "loc": Object {
                            "end": 54,
                            "start": 35,
                          },
                          "selections": Array [
                            Object {
                              "alias": undefined,
                              "arguments": Array [],
                              "directives": Array [],
                              "kind": "Field",
                              "loc": Object {
                                "end": 48,
                                "start": 43,
                              },
                              "name": Object {
                                "kind": "Name",
                                "loc": Object {
                                  "end": 48,
                                  "start": 43,
                                },
                                "value": "title",
                              },
                              "selectionSet": undefined,
                            },
                          ],
                        },
                      },
                    ],
                  },
                },
              ],
            },
            "variableDefinitions": Array [],
          },
        ],
        "kind": "Document",
        "loc": Object {
          "end": 61,
          "start": 0,
        },
      },
      "filePath": "fragment-shorthand.js",
      "hash": 3159585216,
      "isConfigQuery": false,
      "isHook": false,
      "isStaticQuery": true,
      "templateLoc": SourceLocation {
        "end": Position {
          "column": 0,
          "index": 156,
          "line": 12,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 22,
          "index": 95,
          "line": 4,
        },
      },
      "text": "query{site{siteMetadata{title}}}",
    },
    Object {
      "doc": Object {
        "definitions": Array [
          Object {
            "directives": Array [],
            "kind": "OperationDefinition",
            "loc": Object {
              "end": 47,
              "start": 0,
            },
            "name": Object {
              "kind": "Name",
              "value": "staticQueryInSeparateVariableJs1528532020",
            },
            "operation": "query",
            "selectionSet": Object {
              "kind": "SelectionSet",
              "loc": Object {
                "end": 47,
                "start": 0,
              },
              "selections": Array [
                Object {
                  "alias": undefined,
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "loc": Object {
                    "end": 46,
                    "start": 2,
                  },
                  "name": Object {
                    "kind": "Name",
                    "loc": Object {
                      "end": 19,
                      "start": 2,
                    },
                    "value": "allMarkdownRemark",
                  },
                  "selectionSet": Object {
                    "kind": "SelectionSet",
                    "loc": Object {
                      "end": 46,
                      "start": 20,
                    },
                    "selections": Array [
                      Object {
                        "alias": undefined,
                        "arguments": Array [],
                        "directives": Array [],
                        "kind": "Field",
                        "loc": Object {
                          "end": 45,
                          "start": 22,
                        },
                        "name": Object {
                          "kind": "Name",
                          "loc": Object {
                            "end": 26,
                            "start": 22,
                          },
                          "value": "blah",
                        },
                        "selectionSet": Object {
                          "kind": "SelectionSet",
                          "loc": Object {
                            "end": 45,
                            "start": 27,
                          },
                          "selections": Array [
                            Object {
                              "alias": undefined,
                              "arguments": Array [],
                              "directives": Array [],
                              "kind": "Field",
                              "loc": Object {
                                "end": 44,
                                "start": 29,
                              },
                              "name": Object {
                                "kind": "Name",
                                "loc": Object {
                                  "end": 33,
                                  "start": 29,
                                },
                                "value": "node",
                              },
                              "selectionSet": Object {
                                "kind": "SelectionSet",
                                "loc": Object {
                                  "end": 44,
                                  "start": 34,
                                },
                                "selections": Array [
                                  Object {
                                    "alias": undefined,
                                    "arguments": Array [],
                                    "directives": Array [],
                                    "kind": "Field",
                                    "loc": Object {
                                      "end": 42,
                                      "start": 36,
                                    },
                                    "name": Object {
                                      "kind": "Name",
                                      "loc": Object {
                                        "end": 42,
                                        "start": 36,
                                      },
                                      "value": "cheese",
                                    },
                                    "selectionSet": undefined,
                                  },
                                ],
                              },
                            },
                          ],
                        },
                      },
                    ],
                  },
                },
              ],
            },
            "variableDefinitions": Array [],
          },
        ],
        "kind": "Document",
        "loc": Object {
          "end": 47,
          "start": 0,
        },
      },
      "filePath": "query-in-separate-variable.js",
      "hash": 1528532020,
      "isConfigQuery": false,
      "isHook": false,
      "isStaticQuery": true,
      "templateLoc": SourceLocation {
        "end": Position {
          "column": 69,
          "index": 142,
          "line": 4,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 22,
          "index": 95,
          "line": 4,
        },
      },
      "text": "{allMarkdownRemark{blah{node{cheese}}}}",
    },
    Object {
      "doc": Object {
        "definitions": Array [
          Object {
            "directives": Array [],
            "kind": "OperationDefinition",
            "loc": Object {
              "end": 49,
              "start": 0,
            },
            "name": Object {
              "kind": "Name",
              "value": "staticQueryInSeparateVariable2Js278713111",
            },
            "operation": "query",
            "selectionSet": Object {
              "kind": "SelectionSet",
              "loc": Object {
                "end": 49,
                "start": 0,
              },
              "selections": Array [
                Object {
                  "alias": undefined,
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "loc": Object {
                    "end": 48,
                    "start": 2,
                  },
                  "name": Object {
                    "kind": "Name",
                    "loc": Object {
                      "end": 21,
                      "start": 2,
                    },
                    "value": "allStrangeQueryName",
                  },
                  "selectionSet": Object {
                    "kind": "SelectionSet",
                    "loc": Object {
                      "end": 48,
                      "start": 22,
                    },
                    "selections": Array [
                      Object {
                        "alias": undefined,
                        "arguments": Array [],
                        "directives": Array [],
                        "kind": "Field",
                        "loc": Object {
                          "end": 47,
                          "start": 24,
                        },
                        "name": Object {
                          "kind": "Name",
                          "loc": Object {
                            "end": 28,
                            "start": 24,
                          },
                          "value": "blah",
                        },
                        "selectionSet": Object {
                          "kind": "SelectionSet",
                          "loc": Object {
                            "end": 47,
                            "start": 29,
                          },
                          "selections": Array [
                            Object {
                              "alias": undefined,
                              "arguments": Array [],
                              "directives": Array [],
                              "kind": "Field",
                              "loc": Object {
                                "end": 46,
                                "start": 31,
                              },
                              "name": Object {
                                "kind": "Name",
                                "loc": Object {
                                  "end": 35,
                                  "start": 31,
                                },
                                "value": "node",
                              },
                              "selectionSet": Object {
                                "kind": "SelectionSet",
                                "loc": Object {
                                  "end": 46,
                                  "start": 36,
                                },
                                "selections": Array [
                                  Object {
                                    "alias": undefined,
                                    "arguments": Array [],
                                    "directives": Array [],
                                    "kind": "Field",
                                    "loc": Object {
                                      "end": 44,
                                      "start": 38,
                                    },
                                    "name": Object {
                                      "kind": "Name",
                                      "loc": Object {
                                        "end": 44,
                                        "start": 38,
                                      },
                                      "value": "cheese",
                                    },
                                    "selectionSet": undefined,
                                  },
                                ],
                              },
                            },
                          ],
                        },
                      },
                    ],
                  },
                },
              ],
            },
            "variableDefinitions": Array [],
          },
        ],
        "kind": "Document",
        "loc": Object {
          "end": 49,
          "start": 0,
        },
      },
      "filePath": "query-in-separate-variable-2.js",
      "hash": 278713111,
      "isConfigQuery": false,
      "isHook": false,
      "isStaticQuery": true,
      "templateLoc": SourceLocation {
        "end": Position {
          "column": 82,
          "index": 216,
          "line": 5,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 33,
          "index": 167,
          "line": 5,
        },
      },
      "text": "{allStrangeQueryName{blah{node{cheese}}}}",
    },
    Object {
      "doc": Object {
        "definitions": Array [
          Object {
            "directives": Array [],
            "kind": "OperationDefinition",
            "loc": Object {
              "end": 29,
              "start": 0,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 21,
                "start": 6,
              },
              "value": "StaticQueryName",
            },
            "operation": "query",
            "selectionSet": Object {
              "kind": "SelectionSet",
              "loc": Object {
                "end": 29,
                "start": 22,
              },
              "selections": Array [
                Object {
                  "alias": undefined,
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "loc": Object {
                    "end": 27,
                    "start": 24,
                  },
                  "name": Object {
                    "kind": "Name",
                    "loc": Object {
                      "end": 27,
                      "start": 24,
                    },
                    "value": "foo",
                  },
                  "selectionSet": undefined,
                },
              ],
            },
            "variableDefinitions": Array [],
          },
        ],
        "kind": "Document",
        "loc": Object {
          "end": 29,
          "start": 0,
        },
      },
      "filePath": "static-query-hooks.js",
      "hash": 2687344169,
      "isConfigQuery": false,
      "isHook": true,
      "isStaticQuery": true,
      "templateLoc": SourceLocation {
        "end": Position {
          "column": 65,
          "index": 137,
          "line": 3,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 36,
          "index": 108,
          "line": 3,
        },
      },
      "text": "query StaticQueryName{foo}",
    },
    Object {
      "doc": Object {
        "definitions": Array [
          Object {
            "directives": Array [],
            "kind": "OperationDefinition",
            "loc": Object {
              "end": 29,
              "start": 0,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 21,
                "start": 6,
              },
              "value": "StaticQueryName",
            },
            "operation": "query",
            "selectionSet": Object {
              "kind": "SelectionSet",
              "loc": Object {
                "end": 29,
                "start": 22,
              },
              "selections": Array [
                Object {
                  "alias": undefined,
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "loc": Object {
                    "end": 27,
                    "start": 24,
                  },
                  "name": Object {
                    "kind": "Name",
                    "loc": Object {
                      "end": 27,
                      "start": 24,
                    },
                    "value": "foo",
                  },
                  "selectionSet": undefined,
                },
              ],
            },
            "variableDefinitions": Array [],
          },
        ],
        "kind": "Document",
        "loc": Object {
          "end": 29,
          "start": 0,
        },
      },
      "filePath": "static-query-hooks-with-other-export.js",
      "hash": 2687344169,
      "isConfigQuery": false,
      "isHook": true,
      "isStaticQuery": true,
      "templateLoc": SourceLocation {
        "end": Position {
          "column": 65,
          "index": 163,
          "line": 4,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 36,
          "index": 134,
          "line": 4,
        },
      },
      "text": "query StaticQueryName{foo}",
    },
    Object {
      "doc": Object {
        "definitions": Array [
          Object {
            "directives": Array [],
            "kind": "OperationDefinition",
            "loc": Object {
              "end": 29,
              "start": 0,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 21,
                "start": 6,
              },
              "value": "StaticQueryName",
            },
            "operation": "query",
            "selectionSet": Object {
              "kind": "SelectionSet",
              "loc": Object {
                "end": 29,
                "start": 22,
              },
              "selections": Array [
                Object {
                  "alias": undefined,
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "loc": Object {
                    "end": 27,
                    "start": 24,
                  },
                  "name": Object {
                    "kind": "Name",
                    "loc": Object {
                      "end": 27,
                      "start": 24,
                    },
                    "value": "foo",
                  },
                  "selectionSet": undefined,
                },
              ],
            },
            "variableDefinitions": Array [],
          },
        ],
        "kind": "Document",
        "loc": Object {
          "end": 29,
          "start": 0,
        },
      },
      "filePath": "static-query-hooks-alternative-import.js",
      "hash": 2687344169,
      "isConfigQuery": false,
      "isHook": true,
      "isStaticQuery": true,
      "templateLoc": SourceLocation {
        "end": Position {
          "column": 79,
          "index": 135,
          "line": 3,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 50,
          "index": 106,
          "line": 3,
        },
      },
      "text": "query StaticQueryName{foo}",
    },
    Object {
      "doc": Object {
        "definitions": Array [
          Object {
            "directives": Array [],
            "kind": "OperationDefinition",
            "loc": Object {
              "end": 29,
              "start": 0,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 21,
                "start": 6,
              },
              "value": "StaticQueryName",
            },
            "operation": "query",
            "selectionSet": Object {
              "kind": "SelectionSet",
              "loc": Object {
                "end": 29,
                "start": 22,
              },
              "selections": Array [
                Object {
                  "alias": undefined,
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "loc": Object {
                    "end": 27,
                    "start": 24,
                  },
                  "name": Object {
                    "kind": "Name",
                    "loc": Object {
                      "end": 27,
                      "start": 24,
                    },
                    "value": "foo",
                  },
                  "selectionSet": undefined,
                },
              ],
            },
            "variableDefinitions": Array [],
          },
        ],
        "kind": "Document",
        "loc": Object {
          "end": 29,
          "start": 0,
        },
      },
      "filePath": "static-query-hooks-with-type-parameter.ts",
      "hash": 2687344169,
      "isConfigQuery": false,
      "isHook": true,
      "isStaticQuery": true,
      "templateLoc": SourceLocation {
        "end": Position {
          "column": 80,
          "index": 152,
          "line": 3,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 51,
          "index": 123,
          "line": 3,
        },
      },
      "text": "query StaticQueryName{foo}",
    },
    Object {
      "doc": Object {
        "definitions": Array [
          Object {
            "directives": Array [],
            "kind": "OperationDefinition",
            "loc": Object {
              "end": 47,
              "start": 0,
            },
            "name": Object {
              "kind": "Name",
              "value": "staticStaticQueryHooksInSeparateVariableJs1528532020",
            },
            "operation": "query",
            "selectionSet": Object {
              "kind": "SelectionSet",
              "loc": Object {
                "end": 47,
                "start": 0,
              },
              "selections": Array [
                Object {
                  "alias": undefined,
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "loc": Object {
                    "end": 46,
                    "start": 2,
                  },
                  "name": Object {
                    "kind": "Name",
                    "loc": Object {
                      "end": 19,
                      "start": 2,
                    },
                    "value": "allMarkdownRemark",
                  },
                  "selectionSet": Object {
                    "kind": "SelectionSet",
                    "loc": Object {
                      "end": 46,
                      "start": 20,
                    },
                    "selections": Array [
                      Object {
                        "alias": undefined,
                        "arguments": Array [],
                        "directives": Array [],
                        "kind": "Field",
                        "loc": Object {
                          "end": 45,
                          "start": 22,
                        },
                        "name": Object {
                          "kind": "Name",
                          "loc": Object {
                            "end": 26,
                            "start": 22,
                          },
                          "value": "blah",
                        },
                        "selectionSet": Object {
                          "kind": "SelectionSet",
                          "loc": Object {
                            "end": 45,
                            "start": 27,
                          },
                          "selections": Array [
                            Object {
                              "alias": undefined,
                              "arguments": Array [],
                              "directives": Array [],
                              "kind": "Field",
                              "loc": Object {
                                "end": 44,
                                "start": 29,
                              },
                              "name": Object {
                                "kind": "Name",
                                "loc": Object {
                                  "end": 33,
                                  "start": 29,
                                },
                                "value": "node",
                              },
                              "selectionSet": Object {
                                "kind": "SelectionSet",
                                "loc": Object {
                                  "end": 44,
                                  "start": 34,
                                },
                                "selections": Array [
                                  Object {
                                    "alias": undefined,
                                    "arguments": Array [],
                                    "directives": Array [],
                                    "kind": "Field",
                                    "loc": Object {
                                      "end": 42,
                                      "start": 36,
                                    },
                                    "name": Object {
                                      "kind": "Name",
                                      "loc": Object {
                                        "end": 42,
                                        "start": 36,
                                      },
                                      "value": "cheese",
                                    },
                                    "selectionSet": undefined,
                                  },
                                ],
                              },
                            },
                          ],
                        },
                      },
                    ],
                  },
                },
              ],
            },
            "variableDefinitions": Array [],
          },
        ],
        "kind": "Document",
        "loc": Object {
          "end": 47,
          "start": 0,
        },
      },
      "filePath": "static-query-hooks-in-separate-variable.js",
      "hash": 1528532020,
      "isConfigQuery": false,
      "isHook": true,
      "isStaticQuery": true,
      "templateLoc": SourceLocation {
        "end": Position {
          "column": 69,
          "index": 145,
          "line": 4,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 22,
          "index": 98,
          "line": 4,
        },
      },
      "text": "{allMarkdownRemark{blah{node{cheese}}}}",
    },
    Object {
      "doc": Object {
        "definitions": Array [
          Object {
            "directives": Array [],
            "kind": "OperationDefinition",
            "loc": Object {
              "end": 13,
              "start": 0,
            },
            "name": Object {
              "kind": "Name",
              "value": "staticZhADollarpercentandJs1125018085",
            },
            "operation": "query",
            "selectionSet": Object {
              "kind": "SelectionSet",
              "loc": Object {
                "end": 13,
                "start": 6,
              },
              "selections": Array [
                Object {
                  "alias": undefined,
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "loc": Object {
                    "end": 11,
                    "start": 8,
                  },
                  "name": Object {
                    "kind": "Name",
                    "loc": Object {
                      "end": 11,
                      "start": 8,
                    },
                    "value": "foo",
                  },
                  "selectionSet": undefined,
                },
              ],
            },
            "variableDefinitions": Array [],
          },
        ],
        "kind": "Document",
        "loc": Object {
          "end": 13,
          "start": 0,
        },
      },
      "filePath": "ж-ä-!@#$%^&*()_-=+:;'\\"?,~\`.js",
      "hash": 1125018085,
      "isConfigQuery": false,
      "isHook": true,
      "isStaticQuery": true,
      "templateLoc": SourceLocation {
        "end": Position {
          "column": 49,
          "index": 121,
          "line": 3,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 36,
          "index": 108,
          "line": 3,
        },
      },
      "text": "query{foo}",
    },
    Object {
      "doc": Object {
        "definitions": Array [
          Object {
            "directives": Array [],
            "kind": "OperationDefinition",
            "loc": Object {
              "end": 13,
              "start": 0,
            },
            "name": Object {
              "kind": "Name",
              "value": "staticStaticZhADollarpercentandJs1125018085",
            },
            "operation": "query",
            "selectionSet": Object {
              "kind": "SelectionSet",
              "loc": Object {
                "end": 13,
                "start": 6,
              },
              "selections": Array [
                Object {
                  "alias": undefined,
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "loc": Object {
                    "end": 11,
                    "start": 8,
                  },
                  "name": Object {
                    "kind": "Name",
                    "loc": Object {
                      "end": 11,
                      "start": 8,
                    },
                    "value": "foo",
                  },
                  "selectionSet": undefined,
                },
              ],
            },
            "variableDefinitions": Array [],
          },
        ],
        "kind": "Document",
        "loc": Object {
          "end": 13,
          "start": 0,
        },
      },
      "filePath": "static-ж-ä-!@#$%^&*()_-=+:;'\\"?,~\`.js",
      "hash": 1125018085,
      "isConfigQuery": false,
      "isHook": false,
      "isStaticQuery": true,
      "templateLoc": SourceLocation {
        "end": Position {
          "column": 30,
          "index": 99,
          "line": 4,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 17,
          "index": 86,
          "line": 4,
        },
      },
      "text": "query{foo}",
    },
    Object {
      "doc": Object {
        "definitions": Array [
          Object {
            "directives": Array [],
            "kind": "OperationDefinition",
            "loc": Object {
              "end": 29,
              "start": 0,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 21,
                "start": 6,
              },
              "value": "StaticQueryName",
            },
            "operation": "query",
            "selectionSet": Object {
              "kind": "SelectionSet",
              "loc": Object {
                "end": 29,
                "start": 22,
              },
              "selections": Array [
                Object {
                  "alias": undefined,
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "loc": Object {
                    "end": 27,
                    "start": 24,
                  },
                  "name": Object {
                    "kind": "Name",
                    "loc": Object {
                      "end": 27,
                      "start": 24,
                    },
                    "value": "foo",
                  },
                  "selectionSet": undefined,
                },
              ],
            },
            "variableDefinitions": Array [],
          },
        ],
        "kind": "Document",
        "loc": Object {
          "end": 29,
          "start": 0,
        },
      },
      "filePath": "static-query-hooks-commonjs.js",
      "hash": 2687344169,
      "isConfigQuery": false,
      "isHook": true,
      "isStaticQuery": true,
      "templateLoc": SourceLocation {
        "end": Position {
          "column": 65,
          "index": 144,
          "line": 3,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 36,
          "index": 115,
          "line": 3,
        },
      },
      "text": "query StaticQueryName{foo}",
    },
    Object {
      "doc": Object {
        "definitions": Array [
          Object {
            "directives": Array [],
            "kind": "OperationDefinition",
            "loc": Object {
              "end": 44,
              "start": 0,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 36,
                "start": 6,
              },
              "value": "StaticQueryNameNoDestructuring",
            },
            "operation": "query",
            "selectionSet": Object {
              "kind": "SelectionSet",
              "loc": Object {
                "end": 44,
                "start": 37,
              },
              "selections": Array [
                Object {
                  "alias": undefined,
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "loc": Object {
                    "end": 42,
                    "start": 39,
                  },
                  "name": Object {
                    "kind": "Name",
                    "loc": Object {
                      "end": 42,
                      "start": 39,
                    },
                    "value": "foo",
                  },
                  "selectionSet": undefined,
                },
              ],
            },
            "variableDefinitions": Array [],
          },
        ],
        "kind": "Document",
        "loc": Object {
          "end": 44,
          "start": 0,
        },
      },
      "filePath": "static-query-hooks-commonjs-no-destructuring.js",
      "hash": 2462364336,
      "isConfigQuery": false,
      "isHook": true,
      "isStaticQuery": true,
      "templateLoc": SourceLocation {
        "end": Position {
          "column": 87,
          "index": 181,
          "line": 4,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 43,
          "index": 137,
          "line": 4,
        },
      },
      "text": "query StaticQueryNameNoDestructuring{foo}",
    },
    Object {
      "doc": Object {
        "definitions": Array [
          Object {
            "directives": Array [],
            "kind": "OperationDefinition",
            "loc": Object {
              "end": 26,
              "start": 1,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 16,
                "start": 7,
              },
              "value": "PageQuery",
            },
            "operation": "query",
            "selectionSet": Object {
              "kind": "SelectionSet",
              "loc": Object {
                "end": 26,
                "start": 17,
              },
              "selections": Array [
                Object {
                  "alias": undefined,
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "loc": Object {
                    "end": 24,
                    "start": 21,
                  },
                  "name": Object {
                    "kind": "Name",
                    "loc": Object {
                      "end": 24,
                      "start": 21,
                    },
                    "value": "foo",
                  },
                  "selectionSet": undefined,
                },
              ],
            },
            "variableDefinitions": Array [],
          },
        ],
        "kind": "Document",
        "loc": Object {
          "end": 27,
          "start": 0,
        },
      },
      "filePath": "page-with-config.js",
      "hash": 3463071779,
      "isConfigQuery": false,
      "isHook": false,
      "isStaticQuery": false,
      "templateLoc": SourceLocation {
        "end": Position {
          "column": 0,
          "index": 89,
          "line": 6,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 29,
          "index": 62,
          "line": 2,
        },
      },
      "text": "query PageQuery{foo}",
    },
    Object {
      "doc": Object {
        "definitions": Array [
          Object {
            "directives": Array [],
            "kind": "OperationDefinition",
            "loc": Object {
              "end": 32,
              "start": 0,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 17,
                "start": 6,
              },
              "value": "ConfigQuery",
            },
            "operation": "query",
            "selectionSet": Object {
              "kind": "SelectionSet",
              "loc": Object {
                "end": 32,
                "start": 18,
              },
              "selections": Array [
                Object {
                  "alias": undefined,
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "loc": Object {
                    "end": 30,
                    "start": 20,
                  },
                  "name": Object {
                    "kind": "Name",
                    "loc": Object {
                      "end": 30,
                      "start": 20,
                    },
                    "value": "__typename",
                  },
                  "selectionSet": undefined,
                },
              ],
            },
            "variableDefinitions": Array [],
          },
        ],
        "kind": "Document",
        "loc": Object {
          "end": 32,
          "start": 0,
        },
      },
      "filePath": "page-with-config.js",
      "hash": 3646331219,
      "isConfigQuery": true,
      "isHook": false,
      "isStaticQuery": false,
      "templateLoc": SourceLocation {
        "end": Position {
          "column": 54,
          "index": 178,
          "line": 8,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 22,
          "index": 146,
          "line": 8,
        },
      },
      "text": "query ConfigQuery{__typename}",
    },
    Object {
      "doc": Object {
        "definitions": Array [
          Object {
            "directives": Array [],
            "kind": "OperationDefinition",
            "loc": Object {
              "end": 26,
              "start": 1,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 16,
                "start": 7,
              },
              "value": "PageQuery",
            },
            "operation": "query",
            "selectionSet": Object {
              "kind": "SelectionSet",
              "loc": Object {
                "end": 26,
                "start": 17,
              },
              "selections": Array [
                Object {
                  "alias": undefined,
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "loc": Object {
                    "end": 24,
                    "start": 21,
                  },
                  "name": Object {
                    "kind": "Name",
                    "loc": Object {
                      "end": 24,
                      "start": 21,
                    },
                    "value": "foo",
                  },
                  "selectionSet": undefined,
                },
              ],
            },
            "variableDefinitions": Array [],
          },
        ],
        "kind": "Document",
        "loc": Object {
          "end": 27,
          "start": 0,
        },
      },
      "filePath": "page-with-config-no-name.js",
      "hash": 3463071779,
      "isConfigQuery": false,
      "isHook": false,
      "isStaticQuery": false,
      "templateLoc": SourceLocation {
        "end": Position {
          "column": 0,
          "index": 89,
          "line": 6,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 29,
          "index": 62,
          "line": 2,
        },
      },
      "text": "query PageQuery{foo}",
    },
    Object {
      "doc": Object {
        "definitions": Array [
          Object {
            "directives": Array [],
            "kind": "OperationDefinition",
            "loc": Object {
              "end": 14,
              "start": 0,
            },
            "name": Object {
              "kind": "Name",
              "value": "configPageWithConfigNoNameJs4128538483",
            },
            "operation": "query",
            "selectionSet": Object {
              "kind": "SelectionSet",
              "loc": Object {
                "end": 14,
                "start": 0,
              },
              "selections": Array [
                Object {
                  "alias": undefined,
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "loc": Object {
                    "end": 12,
                    "start": 2,
                  },
                  "name": Object {
                    "kind": "Name",
                    "loc": Object {
                      "end": 12,
                      "start": 2,
                    },
                    "value": "__typename",
                  },
                  "selectionSet": undefined,
                },
              ],
            },
            "variableDefinitions": Array [],
          },
        ],
        "kind": "Document",
        "loc": Object {
          "end": 14,
          "start": 0,
        },
      },
      "filePath": "page-with-config-no-name.js",
      "hash": 4128538483,
      "isConfigQuery": true,
      "isHook": false,
      "isStaticQuery": false,
      "templateLoc": SourceLocation {
        "end": Position {
          "column": 36,
          "index": 163,
          "line": 8,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 22,
          "index": 149,
          "line": 8,
        },
      },
      "text": "{__typename}",
    },
  ],
  "warnCalls": Array [
    Array [
      "
We were unable to find the declaration of variable \\"strangeQueryName\\", which you passed as the \\"query\\" prop into the <StaticQuery> declaration in \\"query-not-defined.js\\".

Perhaps the variable name has a typo?

Also note that we are currently unable to use queries defined in files other than the file where the <StaticQuery> is defined. If you're attempting to import the query, please move it into \\"query-not-defined.js\\". If being able to import queries from another file is an important capability for you, we invite your help fixing it.
",
    ],
    Array [
      "
We were unable to find the declaration of variable \\"strangeQueryName\\", which you passed as the \\"query\\" prop into the <StaticQuery> declaration in \\"query-imported.js\\".

Perhaps the variable name has a typo?

Also note that we are currently unable to use queries defined in files other than the file where the <StaticQuery> is defined. If you're attempting to import the query, please move it into \\"query-imported.js\\". If being able to import queries from another file is an important capability for you, we invite your help fixing it.
",
    ],
    Array [
      "
We were unable to find the declaration of variable \\"strangeQueryName\\", which you passed as the \\"query\\" prop into the useStaticQuery declaration in \\"static-query-hooks-not-defined.js\\".

Perhaps the variable name has a typo?

Also note that we are currently unable to use queries defined in files other than the file where the useStaticQuery is defined. If you're attempting to import the query, please move it into \\"static-query-hooks-not-defined.js\\". If being able to import queries from another file is an important capability for you, we invite your help fixing it.
",
    ],
    Array [
      "
We were unable to find the declaration of variable \\"strangeQueryName\\", which you passed as the \\"query\\" prop into the useStaticQuery declaration in \\"static-query-hooks-imported.js\\".

Perhaps the variable name has a typo?

Also note that we are currently unable to use queries defined in files other than the file where the useStaticQuery is defined. If you're attempting to import the query, please move it into \\"static-query-hooks-imported.js\\". If being able to import queries from another file is an important capability for you, we invite your help fixing it.
",
    ],
  ],
}
`;

exports[`File parser extracts slices and their props correctly (slice-computed.js) 1`] = `
Object {
  "pageSlices": Object {
    "foo-bar": Object {
      "allowEmpty": false,
      "name": "foo-bar",
    },
  },
  "warnCalls": Array [],
}
`;

exports[`File parser extracts slices and their props correctly (slice-const-in-scope.js) 1`] = `
Object {
  "pageSlices": Object {
    "foo": Object {
      "allowEmpty": false,
      "name": "foo",
    },
  },
  "warnCalls": Array [],
}
`;

exports[`File parser extracts slices and their props correctly (slice-function.js) 1`] = `
Object {
  "pageSlices": null,
  "warnCalls": Array [
    Array [
      "[Gatsby Slice API] Could not find values in \\"slice-function.js:5:10\\" for the following props at build time: alias",
    ],
  ],
}
`;

exports[`File parser extracts slices and their props correctly (slice-simple.js) 1`] = `
Object {
  "pageSlices": Object {
    "foo": Object {
      "allowEmpty": false,
      "name": "foo",
    },
  },
  "warnCalls": Array [],
}
`;

exports[`File parser extracts slices and their props correctly (slice-simple-with-allow-empty.js) 1`] = `
Object {
  "pageSlices": Object {
    "foo": Object {
      "allowEmpty": true,
      "name": "foo",
    },
  },
  "warnCalls": Array [],
}
`;

exports[`File parser extracts slices and their props correctly (slice-spread-in-scope.js) 1`] = `
Object {
  "pageSlices": Object {
    "foo": Object {
      "allowEmpty": false,
      "name": "foo",
    },
  },
  "warnCalls": Array [],
}
`;
